--- a/public/assets/sass/_app.scss
+++ b/public/assets/sass/_app.scss
@@ -355,12 +355,27 @@
           border-radius: 15px;
           box-shadow: 0px 0px 8px -4px black;
           margin: 10px 0;
+          ul {
+            padding: 0;
+            li {
+              list-style: none;
+              align-items: center;
+              margin-bottom: 10px;
+              input {
+                margin: 0;
+                margin-right: 10px;
+              }
+            }
+          }
           input {
             margin-top: 10px;
             background-color: white;
           }
           span {
             font-weight: bold;
+          }
+          img {
+            height: 45px;
           }
         }
         input,
